fix margin top on hero section; test overflow fix

--- a/src/sass/_background.scss
+++ b/src/sass/_background.scss
@@ -1,5 +1,7 @@
 .background {
-  overflow-x: hidden;
+  &__shapes {
+    overflow-x: hidden;
+  }
   z-index: -1;
   &::before {
     content: "";
